EN/64BIT/USBBoxProtocol.h

typedef void (CALLBACK *USBVOICECALLACK)(BYTE *pbuffer,int nLength,int nReference,int nDeviceIndex,int nAdpcmPacket,DWORD dwDeviceID);	// USB语音数据回传adpcm
typedef void (CALLBACK *USBEVENTCALLBACK)(WORD wEventCode, int nReference,DWORD dwParam,DWORD dwDeviceID);								// USB事件回传
	int WINAPI UsbBox_EnableDevice();										// 初始化USB录音设备
	int WINAPI UsbBox_DisableDevice();										// 释放USB录音设备
	int WINAPI UsbBox_SetDeviceType(int nType);								// 设置USB设备类型(1,2,4,8线)
	int WINAPI UsbBox_SetRecordMethod(int nReference,int nMethod);			// 设置USB设备录音类型 压控(默认) 声控
	int WINAPI UsbBox_SetRecordFormat(int nFormat);							// 设置USB设备录音格式(wave mp3)
	int WINAPI UsbBox_VoiceCallBack(USBVOICECALLACK pfun);					// 设定语音回传
	int WINAPI UsbBox_EventCallBack(USBEVENTCALLBACK pfun);					// 设定事件回传(callback模式)
	int WINAPI UsbBox_SetMsg(HWND hMsgWnd);									// 接收消息(消息模式)
	int WINAPI UsbBox_GetVoltage(int nReference);							// 获取线路电压
	int WINAPI UsbBox_GetRingCount(int nReference);							// 获取铃声次数
	int WINAPI UsbBox_GetRecordTime(int nReference);						// 获取录音时长
	int WINAPI UsbBox_GetCallerNumber(int nReference,char *pszCaller);		// 获取来电号码
	int WINAPI UsbBox_GetDtmfNumber(int nReference,char *pszCaller);		// 获取DTMF号码
	int WINAPI UsbBox_ClearCallerNumber(int nReference);					// 清除来电号码
	int WINAPI UsbBox_ClearDtmfNumber(int nReference);						// 清除DTMF号码
	int WINAPI UsbBox_GetState(int nReference);								// 获取线路状态
	int WINAPI UsbBox_Pickup(int nReference);								// 提机
	int WINAPI UsbBox_HookOn(int nReference);								// 挂机
	int WINAPI UsbBox_MicOn(int nReference);								// 麦克风开启(带耳机版本的录音盒功能)
	int WINAPI UsbBox_MicOff(int nReference);								// 麦克风关闭(带耳机版本的录音盒功能)
	int WINAPI UsbBox_Diall(int nReference,char *pszDtmf);					// 拨号
	int WINAPI UsbBox_AutoDial(int nReference,char *pszDtmf);				// 拨号(自动拨号 不需要调用其它的API)
	int WINAPI UsbBox_PlayFile(int nReference,char *pszPlayFile);			// 语音播放
	int WINAPI UsbBox_StopPlay(int nReference);								// 停止播放
	int WINAPI UsbBox_StartRecord(int nReference);							// 开始录音(一般不调用 设备会自动录音)
	int WINAPI UsbBox_StartRecordToFile(int nReference,char *pszFilePath);	// 开始录音(录音到指定文件)
	int WINAPI UsbBox_StopRecord(int nReference);							// 结束录音(一般不调用 设备会自动录音)
	int WINAPI UsbBox_SetAutoRecord(int nReference,int nAutoRecord);		// 设置是否自动录音
	int WINAPI UsbBox_SetRecordFolder(char *pszRecordFolder);				// 设置录音路径(文件夹 例如:D:\\)
	int WINAPI UsbBox_GetRecordFilePath(int nReference,char *pszPath);		// 获取录音文件完整路径
	int WINAPI UsbBox_GetDeviceCount();										// 获取USB设备连接数量
	int WINAPI UsbBox_GetChannelCount();									// 获取USB设备通道最大数量(根据设置的设备类型计算)
	int WINAPI UsbBox_GetDeviceSerial(int nReference);						// 获取USB设备ID
	int WINAPI UsbBox_GetDeviceVersion(int nReference,char *pszVersion);	// 获取USB设备版本
	int WINAPI UsbBox_GetDllVersion(char *pszVersion);						// 获取开发包版本